--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <html lang="pt-BR">
 
-
 <head>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&display=swap" rel="stylesheet">
-     <link rel="stylesheat" href="style.css">
-     <title>HIDROGRAFIA</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap&quot; rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>PESTE BUBÔNICA</title>
 </head>
 
 <body>
-
-     <header>AULAS SOBRE HIDROGRAFIA</header>
-     <section>
-          <div>
-               <H1>Bacias (regiões) hidrograficas do Brasil - Definição e Caracteristicas (hidrografia)</H1>
-               <p>Geografia
-          </div>
-          </p>
-          </div>
-
-          </iframe width="560" height="315" src="https://www.youtube.com/embed/mwRYjfPRYGs?si=I9blD07aTSrKdy4H"
-               title="YouTube video player" frameborder="0"
-               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-     </section>
+    <header>HIDROGRAFIA</header>
+    <section>
+        <div class="chamada-texto">
+            <h1>PESTE NEGRA - História, Causas, Sintomas e Tratamento</h1>
+            <p>#História</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/U4I-0OH-Szo?si=Q73uiKySxmVmkAUd&quot;
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
 
 </html>
