ajustei a posicao dos videos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>HIDROGRAFIA</header>
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>HIDROGRAFIA - Bacias (regiões) hidrograficas do Brasil</h1>
             <p><div id="Geografia"></div></p>
@@ -21,9 +21,9 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-    <seaction>
+    <seaction class="categoria">
         <h2>Outras sugestoes de videos</h2>
-        <div>
+        <div class="categorias-videos">
             <a href="https://www.youtube.com/watch?v=dPpxDieVMHA">
                 <img src="https://img.youtube.com/vi/dPpxDieVMHA/maxresdefault.jpg" />
             </a>
