--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" &gt; <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-    <link href=" https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap&quot; rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
     <title>HIDROGRAFIA</title>
 </head>
 
@@ -13,7 +13,7 @@
         <div class="chamada-texto">
             <h1>HIDROGRAFIA - Bacias (regiões) hidrograficas do Brasil</h1>
             <p>
-            <div id="Geografia"></div>
+                ="Geografia"
             </p>
         </div>
         <div>
@@ -23,7 +23,7 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-    <seaction class="categoria">
+    <section class="categoria">
         <h2>Outras sugestoes de videos</h2>
         <div class="categorias-videos">
             <a href="https://www.youtube.com/watch?v=dPpxDieVMHA">
@@ -36,7 +36,7 @@
                 <img src="https://img.youtube.com/vi/pTGXnyKZPo4/maxresdefault.jpg" />
             </a>
         </div>
-        <section>
+    </section>
 </body>
 
 </html>
